2019-1/220/users/4266/executions/1610_2426.log
== TEST (2019-04-02 11:07:37) 
-- CODE:
tempo = float(input("Digite o tempo gasto na viagem (em horas): "))
velocidade = float(input("Digite a velocidade media do carro: "))
dist = velocidade*tempo
quant_litros = dist/12
pint(dist)
pint(quant_litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pint(dist)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:09) 
-- CODE:
tempo = float(input("Digite o tempo gasto na viagem (em horas): "))
velocidade = float(input("Digite a velocidade media do carro: "))
dist = velocidade*tempo
quant_litros = dist/12
pint(dist)
pint(quant_litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pint(dist)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:24) 
-- CODE:
tempo = float(input("Digite o tempo gasto na viagem (em horas): "))
velocidade = float(input("Digite a velocidade media do carro: "))
dist = velocidade*tempo
quant_litros = dist/12
print(dist)
print(quant_litros)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:46) 
-- CODE:
tempo = float(input("Digite o tempo gasto na viagem (em horas): "))
velocidade = float(input("Digite a velocidade media do carro: "))
dist = velocidade*tempo
quant_litros = dist/12
print(dist)
print(quant_litros)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:10:03) 
-- CODE:
tempo = float(input("Digite o tempo gasto na viagem (em horas): "))
velocidade = float(input("Digite a velocidade media do carro: "))
dist = velocidade*tempo
quant_litros = dist/12
print(dist)
print(quant_litros)
-- EXECUTION TIME:
0.139321
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
